app/stylesheets/_sidebar.scss
@import '_variables';
@import '_mixins';

.app-container-sidebar {
  width: $app-container-size;
  height: $app-container-size;
  display: block;
}

.sidebar, .panel-body, .desired-lrp-list, .desired-lrp-detail {
  @extend %full-height;
}

.sidebar {
  table {
    @extend %full-width;
    table-layout: fixed;
  }
}

.desired-lrps, .actual-lrps {
  @extend %scrollable-y;
  flex: 1;
}

.sidebar-header {
  display: flex;
  .sidebar-toggle {
    color: $neutral-11;
    width: $app-container-size;
    border: 1px solid $neutral-3;
    border-radius: 3px;
    height: $app-container-size + $app-container-shadow-height;
    width: $app-container-size;
    line-height: $app-container-size + $app-container-shadow-height;
  }
  .filter-processes {
    flex: 1;
  }
}

.desired-lrp-list, .desired-lrp-detail {
  display: flex;
  flex-direction: column;
  .media, .media-body {
    overflow: hidden;
  }
  .media-body, .media-left, .media-right {
    display: block;
  }
  .media-body {
    width: auto;
  }
  .media-left {
    float: left;
  }
}

.desired-lrp-list {
  .port {
    width: 45px;
  }
}

.desired-lrp {
  .metadata {
    color: $gray-4;
  }
}

.desired-lrp-detail {
  .actual-lrps {
    cursor: default;
    font-size: 18px;
    .index, .since {
      width: 15%;
    }
    .state {
      text-transform: capitalize;
    }
    .faded {
      opacity: 0.35;
    }
  }
  .actual-lrp {
    &.claimed {
      animation-name: almost-fade-in;
    }

    &:hover {
      background-color: $accent-2;
    }
  }
}

.sidebar-hover-thing {
  background-color: $accent-2;
}

.sidebar-hover-thing2 {
  background: $accent-2;
}

.filtered .desired-lrp {
  background-color: transparent;
}

/* Won't work in chrome if more than 2000 selectors extending the same style */
@for $i from 0 through $max-apps/2 {
  .show-app-#{$i} .app-details-#{$i} {
    @extend .sidebar-hover-thing;
  }
}

@for $i from $max-apps/2+1 through $max-apps {
  .show-app-#{$i} .app-details-#{$i} {
    @extend .sidebar-hover-thing2;
  }
}

